ProjektZeitbudget , Routing, Stringcutting, Pakete ausrichten

--- a/IvA/Views/Projekte/AddUser.cshtml
+++ b/IvA/Views/Projekte/AddUser.cshtml
@@ -28,7 +28,6 @@
 </div>
 
 <div>
-    <a asp-action="Index" class="btn btn-dark">Abbrechen</a>
-    
+    <a asp-action="Details" asp-route-id="@ViewBag.RoutingID" class="btn btn-dark" style="color:#ffa400">Zurück zur Projektdetailübersicht</a>
 </div>
 
