--- a/IvA/Views/Projekte/Index.cshtml
+++ b/IvA/Views/Projekte/Index.cshtml
@@ -35,7 +35,7 @@
                 </a>
             </div>
             <div class="card-body text-center">
-                <p class="card-text">@item.Beschreibung</p>
+                <p class="card-text" style="overflow:hidden ; text-overflow:ellipsis ; white-space:nowrap">@item.Beschreibung</p>
             </div>
             <!--
             <div class="card-footer">
@@ -58,7 +58,7 @@
                     </a>
             </div>
             <div class="card-body text-center">
-                <p class="card-text">@item.Beschreibung</p>
+                <p class="card-text" style="overflow:hidden ; text-overflow:ellipsis ; white-space:nowrap">@item.Beschreibung</p>
             </div>
             <!--
             <div class="card-footer">
