--- a/IvA/Views/Dashboard/Index.cshtml
+++ b/IvA/Views/Dashboard/Index.cshtml
@@ -3,19 +3,21 @@
 @{
     ViewData["Title"] = "Dashboard";
 }
-<h1>Mein Dashboard</h1>
+<h1 style="color:#ffa400 ; margin-bottom:20px"><b>Mein Dashboard</b></h1>
+<h3 class="FirstLetter" style="margin-bottom: 20px">Behalten sie den Überblick ober ihre zugeteilten Arbeitspakete</h3>
 
-<div class="dropdown">
-    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+<div class="dropdown" style="margin-bottom:20px">
+    <button class="btn btn-secondary dropdown-toggle FirstLetter" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Ansicht wählen
     </button>
-    <div class="dropdown-menu" aria-labelledby="Ansicht">
-        <a class="dropdown-item active" asp-controller="Dashboard" asp-action="Index">Cards</a>
-        <a class="dropdown-item" asp-controller="Dashboard" asp-action="List">Liste</a>
+    <div class="dropdown-menu bg-secondary" aria-labelledby="Ansicht">
+        <a class="dropdown-item active bg-secondary FirstLetter" asp-controller="Dashboard" asp-action="Index">Cards</a>
+        <a class="dropdown-item bg-secondary FirstLetter" style="color:white" asp-controller="Dashboard" asp-action="List">Liste</a>
     </div>
 </div>
 
-<h2>To Do<h2>
+<!--
+<h2>To Do</h2>
 <div class="card-columns">
     @foreach (var item in Model)
     {
@@ -26,7 +28,7 @@
         <div class="card bg-danger" style="width: 15rem">
             <div class="card-header text-center" style="font-size: 20px; color: black;"><a style="color: white;" asp-action="PaketDetails" asp-controller="Projekte" asp-route-id="@item.ArbeitsPaketId">@item.PaketName</a></div>
             <div class="card-body text-center">
-                <p class ="card-text" style="font-size: 15px;">@item.Beschreibung</p>
+                <p class="card-text" style="font-size: 15px; overflow:hidden ; text-overflow:ellipsis ; white-space:nowrap">@item.Beschreibung</p>
                 <p class="card-text" style="font-size: 20px;">@item.Frist</p>
             </div>
         </div>
@@ -36,7 +38,7 @@
         <div class="card bg-warning" style="width: 15rem">
             <div class="card-header text-center" style="font-size: 20px;"><a  style="color: white;" asp-action="PaketDetails" asp-controller="Projekte" asp-route-id="@item.ArbeitsPaketId">@item.PaketName</a></div>
             <div class="card-body text-center">
-                <p class ="card-text" style="font-size: 15px;">@item.Beschreibung</p>
+                <p class="card-text" style="font-size: 15px; overflow:hidden ; text-overflow:ellipsis ; white-space:nowrap">@item.Beschreibung</p>
                 <p class="card-text" style="font-size: 20px;">@item.Frist</p>
             </div>
         </div>
@@ -44,196 +46,164 @@
         @if (item.Frist >= now.AddDays(7)) 
         {
         <div class="card bg-secondary" style="width: 15rem">
-            <div class="card-header text-center" style="font-size: 20px;"><a style="color: white;" asp-action="PaketDetails" asp-controller="Projekte" asp-route-id="@item.ArbeitsPaketId">@item.PaketName</a></div>
+            <div class="card-header text-center" style="font-size: 20px;"><a style="color: white;" asp-action="PaketDetails" asp-controller="Projekte" asp-route-id="@item.ArbeitsPaketId">@item.PaketName
+                    </a></div>
             <div class="card-body text-center">
-                <p class ="card-text" style="font-size: 15px;">@item.Beschreibung</p>
+                <p class="card-text" style="font-size: 15px; overflow:hidden ; text-overflow:ellipsis ; white-space:nowrap">@item.Beschreibung</p>
                 <p class="card-text" style="font-size: 20px;">@item.Frist</p>
             </div>
         </div>
         }
     }
 </div>
+-->
 
-<div id="accordion">
+
+<div id="accordion"  style="margin-bottom:20px">
   <div class="card bg-secondary">
     <div class="card-header" id="headingOne">
       <h2 class="mb-0">
-        <button class="btn btn-warning" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-          Erldigte To Do
-        </button>
+          <button style="color:white" class="btn btn-danger FirstLetter" data-toggle="collapse" data-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
+              <svg width="20px" height="20px" viewBox="0 0 16 16" class="bi bi-caret-down-fill" fill="black" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M7.247 11.14L2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
+              </svg>
+                <b>Frist ist abgelaufen</b>
+          </button>
       </h2>
     </div>
 
-    <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
-      <div class="card-body">
-        @foreach (var item in Model)
-    {
-        
-        @if (item.Status == "Fertig") 
-        {
-        <div class="card bg-success" style="width: 15rem">
-            <div class="card-header text-center" style="font-size: 20px; color: black;"><a style="color: white;" asp-action="PaketDetails" asp-controller="Projekte" asp-route-id="@item.ArbeitsPaketId">@item.PaketName</a></div>
-            <div class="card-body text-center">
-                <p class ="card-text" style="font-size: 15px;">@item.Beschreibung</p>
-                <p class="card-text" style="font-size: 20px;">@item.Frist</p>
-            </div>
-        </div>
-        }
-    }
+    <div id="collapseFour" class="collapse card-columns" style="margin-bottom:25px" aria-labelledby="headingOne" data-parent="#accordion">
+        <div class="card-body">
+            @foreach (var item in Model)
+            {
+                DateTime now = DateTime.Now;
+                @if (item.Frist <= now.AddDays(3)) 
+                @if (item.Frist < now && item.Status!="fertig")
+                {
+                <div style="width: 15rem ; margin-bottom:20px ;">
+                    <div class="card-header bg-danger text-center" style="font-size:20px; color:white">
+                        <a style="color: white" asp-action="PaketDetails" asp-controller="Projekte" asp-route-id="@item.ArbeitsPaketId">@item.PaketName</a>
+                    </div>
+                    <div class="card-body bg-dark text-center">
+                        <p class="card-text" style="font-size: 15px; overflow:hidden ; text-overflow:ellipsis ; white-space:nowrap">@item.Beschreibung</p>
+                        <p class="card-text" style="font-size: 20px;">@item.Frist.ToShortDateString()</p>
+                    </div>
+                </div>
+                }
+             }
         </div>
     </div>
   </div>
 </div>
-<!--
-<h2>Demnächst zu erledigen</h2>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.PaketName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Beschreibung)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Frist)
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            DateTime now = DateTime.Now;
-            if (item.Frist <= now.AddDays(3))
-            {
-                <tr>
-                    <td>
-                        <a asp-action="PaketDetails" asp-controller="Projekte" asp-route-id="@item.ArbeitsPaketId">@item.PaketName</a>
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Beschreibung)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Frist)
-                    </td>
-                </tr>
-            }
-        }
-    </tbody>
-</table>
--->
-<!--
-<h2>To do</h2>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.PaketName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Beschreibung)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Frist)
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            DateTime now = DateTime.Now;
-            if (item.Status == "To do" && item.Frist >= now.AddDays(3))
-            {
-                <tr>
-                    <td>
-                        <a asp-action="PaketDetails" asp-controller="Projekte" asp-route-id="@item.ArbeitsPaketId">@item.PaketName</a>
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Beschreibung)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Frist)
-                    </td>
-                </tr>
-            }
-        }
-    </tbody>
-</table>
 
-<h2>In Bearbeitung</h2>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.PaketName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Beschreibung)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Frist)
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            DateTime now = DateTime.Now;
-            if (item.Status == "In Bearbeitung" && item.Frist >= now.AddDays(3))
-            {
-                <tr>
-                    <td>
-                        <a asp-action="PaketDetails" asp-controller="Projekte" asp-route-id="@item.ArbeitsPaketId">@item.PaketName</a>
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Beschreibung)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Frist)
-                    </td>
-                </tr>
-            }
-        }
-    </tbody>
-</table>
 
-<h2>Abgeschlossene Aufgaben</h2>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.PaketName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Beschreibung)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Frist)
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            if (item.Status == "Fertig")
-            {
-                <tr>
-                    <td>
-                        <a asp-action="PaketDetails" asp-controller="Projekte" asp-route-id="@item.ArbeitsPaketId">@item.PaketName</a>
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Beschreibung)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Frist)
-                    </td>
-                </tr>
-            }
-        }
-    </tbody>
-</table>
--->
+<div id="accordion"  style="margin-bottom:20px">
+  <div class="card bg-secondary">
+    <div class="card-header" id="headingOne">
+      <h2 class="mb-0">
+          <button style="color:black" class="btn btn-orange FirstLetter" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
+              <svg width="20px" height="20px" viewBox="0 0 16 16" class="bi bi-caret-down-fill" fill="black" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M7.247 11.14L2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
+              </svg>
+                <b>Frist läuft demnächst ab</b>
+          </button>
+      </h2>
+    </div>
 
-@functions{
-    
-}
+    <div id="collapseThree" class="collapse card-columns" style="margin-bottom:25px" aria-labelledby="headingOne" data-parent="#accordion">
+        <div class="card-body">
+            @foreach (var item in Model)
+            {
+                DateTime now = DateTime.Now;
+                @if (item.Frist <= now.AddDays(7) && item.Frist > now)
+                {
+                <div style="width: 15rem ; margin-bottom:20px ;">
+                    <div class="card-header bg-warning text-center" style="font-size:20px; color:black">
+                        <a style="color: black" asp-action="PaketDetails" asp-controller="Projekte" asp-route-id="@item.ArbeitsPaketId">@item.PaketName</a>
+                    </div>
+                    <div class="card-body bg-dark text-center">
+                        <p class="card-text" style="font-size: 15px; overflow:hidden ; text-overflow:ellipsis ; white-space:nowrap">@item.Beschreibung</p>
+                        <p class="card-text" style="font-size: 20px;">@item.Frist.ToShortDateString()</p>
+                    </div>
+                </div>
+                }
+             }
+        </div>
+    </div>
+  </div>
+</div>
+
+
+
+<div id="accordion"  style="margin-bottom:20px">
+  <div class="card bg-secondary">
+    <div class="card-header" id="headingOne">
+      <h2 class="mb-0">
+          <button style="color:#ffa400" class="btn btn-dark FirstLetter" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+              <svg width="20px" height="20px" viewBox="0 0 16 16" class="bi bi-caret-down-fill" fill="black" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M7.247 11.14L2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
+              </svg>
+                <b>In Bearbeitung</b>
+          </button>
+      </h2>
+    </div>
+
+    <div id="collapseOne" class="collapse card-columns" style="margin-bottom:25px" aria-labelledby="headingOne" data-parent="#accordion">
+        <div class="card-body">
+            @foreach (var item in Model)
+            {
+                DateTime now = DateTime.Now;
+                @if (item.Frist >= now.AddDays(7))
+                {
+                <div style="width: 15rem ; margin-bottom:20px ;">
+                    <div class="card-header bg-dark text-center" style="font-size:20px; color:#ffa400">
+                        <a style="color: #ffa400;" asp-action="PaketDetails" asp-controller="Projekte" asp-route-id="@item.ArbeitsPaketId">@item.PaketName</a>
+                    </div>
+                    <div class="card-body bg-lightgrey text-center">
+                        <p class="card-text" style="font-size: 15px; overflow:hidden ; text-overflow:ellipsis ; white-space:nowrap">@item.Beschreibung</p>
+                        <p class="card-text" style="font-size: 20px;">@item.Frist.ToShortDateString()</p>
+                    </div>
+                </div>
+                }
+             }
+        </div>
+    </div>
+  </div>
+</div>
+
+
+
+<div id="accordion" style="margin-bottom:20px">
+  <div class="card bg-secondary">
+    <div class="card-header" id="headingOne">
+      <h2 class="mb-0">
+          <button style="color:white" class="btn btn-success FirstLetter" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+              <svg width="20px" height="20px" viewBox="0 0 16 16" class="bi bi-caret-down-fill" fill="black" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M7.247 11.14L2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
+              </svg>
+                <b>Abgeschlossene Arbeitspakete</b>
+          </button>
+      </h2>
+    </div>
+
+    <div id="collapseTwo" class="collapse card-columns" style="margin-bottom:25px" aria-labelledby="headingOne" data-parent="#accordion">
+        <div class="card-body">
+            @foreach (var item in Model)
+            {
+                @if (item.Status == "Fertig")
+                {
+                <div style="width: 15rem ; margin-bottom:20px">
+                    <div class="card-header bg-success text-center" style="font-size:20px">
+                        <a style="color: white;" asp-action="PaketDetails" asp-controller="Projekte" asp-route-id="@item.ArbeitsPaketId">@item.PaketName</a>
+                    </div>
+                    <div class="card-body bg-dark text-center">
+                        <p class="card-text" style="font-size: 15px; overflow:hidden ; text-overflow:ellipsis ; white-space:nowrap">@item.Beschreibung</p>
+                        <p class="card-text" style="font-size: 20px;">@item.Frist.ToShortDateString()</p>
+                    </div>
+                </div>
+                }
+             }
+        </div>
+    </div>
+  </div>
+</div>
