--- a/IvA/Views/Projekte/Edit.cshtml
+++ b/IvA/Views/Projekte/Edit.cshtml
@@ -5,9 +5,9 @@
 }
 
 
-<h2 style="color: #ffa400"><b>Projektdetails ändern</b></h2>
+<h2 style="color: #ffa400"><b>Projektinformationen ändern</b></h2>
 
-<h4 style="padding-bottom:25px ; padding-top:25px">Ändern sie ihre Projektdetails. Passen sie die Beschreibung des Projektes an, fügen sie neuen Projektmitglieder hinzu oder ändern sie den aktuellen Bearbeitungsstatus.</h4>
+<h4 style="padding-bottom:25px ; padding-top:25px">Ändern sie ihre Projektdetails. Sie haben hier die Möglichkeit, den Projektnamen, die Projektbeschreibung, den aktuellen Bearbeitungsstatus oder die Deadline flexibel anzupassen.</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
