--- a/IvA/Views/Projekte/PaketZeit.cshtml
+++ b/IvA/Views/Projekte/PaketZeit.cshtml
@@ -2,7 +2,7 @@
 
 @{ ViewData["Title"] = "Verbrauchte Zeit Eintragen"; }
 
-<h1>Tragen sie hier die eingesetzte Zeit für das Arbeitspaket ein</h1>
+<h1 style="color:#ffa400"><b>Tragen sie hier die eingesetzte Zeit für das Arbeitspaket ein</b></h1>
 <br />
 <h6 style="color:white">(Wenn sie eine Zeitkorrektur vornehmen möchten, geben sie bitte die Stundenanzahl mit negativem Vorzeichen ein)</h6>
 <br />
