--- a/IvA/Views/Admin/ListProjects.cshtml
+++ b/IvA/Views/Admin/ListProjects.cshtml
@@ -8,7 +8,7 @@
 <table class="table bg-table" style="table-layout:fixed">
     <thead class="bg-table thead-dark">
         <tr>
-            <th scope="col" class="FirstLetter">
+            <th scope="col" class="FirstLetter" >
                 @Html.DisplayNameFor(model => model.Projektname)
             </th>
             <th scope="col" class="FirstLetter">
@@ -36,7 +36,7 @@
         {
         <tr>
             <td>
-                <a asp-action="Details" asp-controller="Projekte" asp-route-id="@item.ProjekteId">@item.Projektname</a>
+                <a asp-action="Details" asp-controller="Projekte" asp-route-id="@item.ProjekteId" style="word-wrap:break-word ; hyphens:auto">@item.Projektname</a>
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Projektersteller)
