--- a/IvA/Views/Dashboard/List.cshtml
+++ b/IvA/Views/Dashboard/List.cshtml
@@ -4,29 +4,30 @@
     ViewData["Title"] = "List";
 }
 
-<h1>Mein Dashboard</h1>
+<h1 style="color:#ffa400 ; margin-bottom:20px"><b>Mein Dashboard</b></h1>
+<h3 class="FirstLetter" style="margin-bottom: 20px">Behalten sie den Überblick über ihre zugeteilten Arbeitspakete</h3>
 
-<div class="dropdown">
-    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+<div class="dropdown" style="margin-bottom:20px">
+    <button class="btn btn-secondary dropdown-toggle FirstLetter" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Ansicht wählen
     </button>
-    <div class="dropdown-menu" aria-labelledby="Ansicht">
-        <a class="dropdown-item" asp-controller="Dashboard" asp-action="Index">Cards</a>
-        <a class="dropdown-item active" asp-controller="Dashboard" asp-action="List">Liste</a>
+    <div class="dropdown-menu bg-secondary" aria-labelledby="Ansicht">
+        <a class="dropdown-item bg-secondary FirstLetter" style="color:white" asp-controller="Dashboard" asp-action="Index">Cards</a>
+        <a class="dropdown-item active bg-secondary FirstLetter" asp-controller="Dashboard" asp-action="List">Liste</a>
     </div>
 </div>
 
-<table class="table">
-    <thead>
+<table class="table bg-table">
+    <thead class="bg-table thead-dark">
         <tr>
-            <th>
+            <th  scope="col" class="FirstLetter">
                 Name
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Frist)
+            <th  scope="col" class="FirstLetter">
+                Frist
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Status)
+            <th  scope="col" class="FirstLetter">
+                Status
             </th>
         </tr>
     </thead>
@@ -35,33 +36,89 @@
         {
             if (item.Status != "Fertig") 
             {
-        <tr>
-            @if (item.Frist <= DateTime.Now.AddDays(3))
-            {
-                <td class="table-danger">
-                    @Html.DisplayFor(modelItem => item.PaketName)
-                </td>
-                <td class="table-danger">
-                    @Html.DisplayFor(modelItem => item.Frist)
-                </td>
-                <td class="table-danger">
-                    @Html.DisplayFor(modelItem => item.Status)
-                </td>
-            }
-            else
-            {
-                <td>
-                    @Html.DisplayFor(modelItem => item.PaketName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Frist)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Status)
-                </td>
-            }
+            <tr>
+                 @if (item.Frist <= DateTime.Now)
+                {
+                    <td class="table-danger bg-danger">
+                        <a asp-action="PaketDetails" asp-controller="Projekte" asp-route-id="@item.ArbeitsPaketId" style="color:black">
+                            <svg width="25px" height="25px" style="margin-right:7px" viewBox="0 0 16 16" class="bi bi-box-seam" fill="#black" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5l2.404.961L10.404 2l-2.218-.887zm3.564 1.426L5.596 5 8 5.961 14.154 3.5l-2.404-.961zm3.25 1.7l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923l6.5 2.6zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464L7.443.184z" />
+                            </svg>@item.PaketName
+                        </a>
+                    </td>
+                    <td class="table-danger bg-danger">
+                        <a style="color:black">@Html.DisplayFor(modelItem => item.Frist)</a>
+                    </td>
+                    <td class="table-danger bg-danger">
+                        <a style="color:black">@Html.DisplayFor(modelItem => item.Frist)</a>
+                    </td>
+                }
+                else if (item.Frist <= DateTime.Now.AddDays(3))
+                {
+                    <td class="table-danger bg-warning">
+                        <a asp-action="PaketDetails" asp-controller="Projekte" asp-route-id="@item.ArbeitsPaketId" style="color:black">
+                            <svg width="25px" height="25px" style="margin-right:7px" viewBox="0 0 16 16" class="bi bi-box-seam" fill="#black" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5l2.404.961L10.404 2l-2.218-.887zm3.564 1.426L5.596 5 8 5.961 14.154 3.5l-2.404-.961zm3.25 1.7l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923l6.5 2.6zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464L7.443.184z" />
+                            </svg>@item.PaketName
+                        </a>
+                    </td>
+                    <td class="table-danger bg-warning">
+                        <a style="color:black">@Html.DisplayFor(modelItem => item.Frist)</a>
+                    </td>
+                    <td class="table-danger bg-warning">
+                        <a style="color:black">@Html.DisplayFor(modelItem => item.Status)</a>
+                    </td>
+                }
+               
+                else 
+                {
+                    <td>
+                        <a asp-action="PaketDetails" asp-controller="Projekte" asp-route-id="@item.ArbeitsPaketId">
+                            <svg width="25px" height="25px" style="margin-right:7px" viewBox="0 0 16 16" class="bi bi-box-seam" fill="#ffa400" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5l2.404.961L10.404 2l-2.218-.887zm3.564 1.426L5.596 5 8 5.961 14.154 3.5l-2.404-.961zm3.25 1.7l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923l6.5 2.6zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464L7.443.184z" />
+                            </svg>@item.PaketName
+                        </a>
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Frist)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Status)
+                    </td>
+                }
 
-        </tr>
+            </tr>
+            }
+            
+            
+            
+        }
+    </tbody>
+    
+</table>
+<br />
+<h3 class="FirstLetter" style="margin-bottom:25px">Fertige Arbeitspakete</h3>
+<table class="table bg-table">
+    <tbody>
+        @foreach (var item in Model)
+        {
+            if (item.Status == "Fertig")
+            {
+                <tr class="bg-success">
+                    <td>
+                        <a asp-action="PaketDetails" asp-controller="Projekte" asp-route-id="@item.ArbeitsPaketId" style="color:white">
+                            <svg width="25px" height="25px" style="margin-right:7px" viewBox="0 0 16 16" class="bi bi-box-seam" fill="white" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5l2.404.961L10.404 2l-2.218-.887zm3.564 1.426L5.596 5 8 5.961 14.154 3.5l-2.404-.961zm3.25 1.7l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923l6.5 2.6zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464L7.443.184z" />
+                            </svg>@item.PaketName
+                        </a>
+                    </td>
+                    <td class="bg-success">
+                        @Html.DisplayFor(modelItem => item.Frist)
+                    </td>
+                    <td class="bg-success">
+                        @Html.DisplayFor(modelItem => item.Status)
+                    </td>
+                </tr>
             }
         }
     </tbody>
