--- a/IvA/Views/Projekte/AddUser.cshtml
+++ b/IvA/Views/Projekte/AddUser.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "AddUser";
 }
 
-<h1>Nutzer zum Projekt hinzufügen</h1>
+<h1 style="color:#ffa400"><b>Nutzer zum Projekt hinzufügen</b></h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -21,7 +21,7 @@
                 <span asp-validation-for="id" type="hidden" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Hinzufügen" class="btn btn-primary" />
+                <input type="submit" value="Hinzufügen" class="btn btn-orange" />
             </div>
         </form>
     </div>
