--- a/IvA/Views/Dashboard/Index.cshtml
+++ b/IvA/Views/Dashboard/Index.cshtml
@@ -82,7 +82,11 @@
                 {
                 <div style="width: 15rem ; margin-bottom:20px ;">
                     <div class="card-header bg-danger text-center" style="font-size:20px; color:white">
-                        <a style="color: white" asp-action="PaketDetails" asp-controller="Projekte" asp-route-id="@item.ArbeitsPaketId">@item.PaketName</a>
+                        <a style="color: white ; word-wrap: break-word ; hyphens:auto" asp-action="PaketDetails" asp-controller="Projekte" asp-route-id="@item.ArbeitsPaketId">
+                            <svg width="25px" height="25px" style="margin-right:7px" viewBox="0 0 16 16" class="bi bi-box-seam" fill="white" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5l2.404.961L10.404 2l-2.218-.887zm3.564 1.426L5.596 5 8 5.961 14.154 3.5l-2.404-.961zm3.25 1.7l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923l6.5 2.6zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464L7.443.184z" />
+                            </svg>@item.PaketName
+                                                </a>
                     </div>
                     <div class="card-body bg-dark text-center">
                         <p class="card-text" style="font-size: 15px; overflow:hidden ; text-overflow:ellipsis ; white-space:nowrap">@item.Beschreibung</p>
@@ -119,7 +123,11 @@
                 {
                 <div style="width: 15rem ; margin-bottom:20px ;">
                     <div class="card-header bg-warning text-center" style="font-size:20px; color:black">
-                        <a style="color: black" asp-action="PaketDetails" asp-controller="Projekte" asp-route-id="@item.ArbeitsPaketId">@item.PaketName</a>
+                        <a style="color: black ; word-wrap: break-word ; hyphens:auto" asp-action="PaketDetails" asp-controller="Projekte" asp-route-id="@item.ArbeitsPaketId">
+                            <svg width="25px" height="25px" style="margin-right:7px" viewBox="0 0 16 16" class="bi bi-box-seam" fill="#black" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5l2.404.961L10.404 2l-2.218-.887zm3.564 1.426L5.596 5 8 5.961 14.154 3.5l-2.404-.961zm3.25 1.7l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923l6.5 2.6zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464L7.443.184z" />
+                            </svg>@item.PaketName
+                                            </a>
                     </div>
                     <div class="card-body bg-dark text-center">
                         <p class="card-text" style="font-size: 15px; overflow:hidden ; text-overflow:ellipsis ; white-space:nowrap">@item.Beschreibung</p>
@@ -157,7 +165,11 @@
                 {
                 <div style="width: 15rem ; margin-bottom:20px ;">
                     <div class="card-header bg-dark text-center" style="font-size:20px; color:#ffa400">
-                        <a style="color: #ffa400;" asp-action="PaketDetails" asp-controller="Projekte" asp-route-id="@item.ArbeitsPaketId">@item.PaketName</a>
+                        <a style="color: #ffa400; word-wrap: break-word ; hyphens:auto" asp-action="PaketDetails" asp-controller="Projekte" asp-route-id="@item.ArbeitsPaketId">
+                            <svg width="25px" height="25px" style="margin-right:7px" viewBox="0 0 16 16" class="bi bi-box-seam" fill="#ffa400" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5l2.404.961L10.404 2l-2.218-.887zm3.564 1.426L5.596 5 8 5.961 14.154 3.5l-2.404-.961zm3.25 1.7l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923l6.5 2.6zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464L7.443.184z" />
+                            </svg>@item.PaketName
+                                            </a>
                     </div>
                     <div class="card-body bg-lightgrey text-center">
                         <p class="card-text" style="font-size: 15px; overflow:hidden ; text-overflow:ellipsis ; white-space:nowrap">@item.Beschreibung</p>
@@ -194,7 +206,11 @@
                 {
                 <div style="width: 15rem ; margin-bottom:20px">
                     <div class="card-header bg-success text-center" style="font-size:20px">
-                        <a style="color: white;" asp-action="PaketDetails" asp-controller="Projekte" asp-route-id="@item.ArbeitsPaketId">@item.PaketName</a>
+                        <a style="color: white; word-wrap: break-word ; hyphens:auto" asp-action="PaketDetails" asp-controller="Projekte" asp-route-id="@item.ArbeitsPaketId">
+                            <svg width="25px" height="25px" style="margin-right:7px" viewBox="0 0 16 16" class="bi bi-box-seam" fill="white" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5l2.404.961L10.404 2l-2.218-.887zm3.564 1.426L5.596 5 8 5.961 14.154 3.5l-2.404-.961zm3.25 1.7l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923l6.5 2.6zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464L7.443.184z" />
+                            </svg>@item.PaketName
+                                            </a>
                     </div>
                     <div class="card-body bg-dark text-center">
                         <p class="card-text" style="font-size: 15px; overflow:hidden ; text-overflow:ellipsis ; white-space:nowrap">@item.Beschreibung</p>
