--- a/IvA/Views/Admin/ListUsers.cshtml
+++ b/IvA/Views/Admin/ListUsers.cshtml
@@ -23,8 +23,8 @@
                     <p>Wollen Sie den Nutzer wirklich löschen? Dieser Vorgang ist nicht umkehrbar.</p>
                 </div>
                 <div class="modal-footer">
-                    <a class="btn btn-danger" asp-action="Delete" asp-route-id="item.Id">Löschen</a>
-                    <button type="button" id="deleteButn" class="btn btn-dark" style="color: #ffa400" data-dismiss="modal">Schließen</button>
+                    <a class="btn btn-danger" asp-action="Delete" asp-route-id="data-whatever">Bestätigen</a>
+                    <button type="button" id="deleteButn" class="btn btn-dark" style="color: #ffa400" data-dismiss="modal">Abbrechen</button>
                 </div>
             </div>
         </div>
